<resources>
    <string name="Search">搜索</string>
    <string name="app_name">广工通信录</string>
    <string name="open_drawer">打开侧边栏</string>
    <string name="close_drawer">关闭侧边栏</string>
    <string name="change_password">修改密码</string>
    <string name="verify">用户审核</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="Acadeny">学院</string>
    <string name="Grade">年级</string>
    <string-array name="Academy">
        <item>计算机学院</item>
        <item>机电工程学院</item>
        <item>轻工化工学院</item>
        <item>土木与交通工程学院</item>
        <item>外国语学院</item>
        <item>信息工程学院</item>
        <item>物理学院</item>
        <item>材料与能源学院</item>
        <item>环境工程学院</item>
        <item>自动化学院学院</item>
    </string-array>
    <string-array name="Grades">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_tel">请输入账号/电话</string>
    <string name="hint_password">请输入密码</string>
    <string name="SignIn">登录</string>
    <string name="forgot_your_password">忘了密码？</string>
    <string name="register">注册</string>
    <string name="title_activity_double_massage">DoubleMassageActivity</string>
    <string name="logout">退出登录</string>
    <string name="send_msg">发送信息</string>
    <string name="call">拨打</string>
    <string name="hide">隐藏</string>
    <string name="cancel">取消</string>
    <string name="registerPho">请输入手机号</string>
    <string name="inputSno">请输入学号</string>
    <string name="name">姓名:</string>
    <string name="inputName">请输入姓名</string>
    <string name="password">密码：</string>
    <string name="ensurePassword">请再次确认密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="classified_query">分类查找</string>
    <string name="account_circle">联系人列表头像</string>
    <string name="see_more">详情</string>
    <string name="ensure">确定</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm_password">请再次确认新密码</string>
    <string name="confirm">确认</string>
    <string name="title_activity_change_meassage">ChangeMeassageActivity</string>
    <string name="Sno">学号:</string>
    <string name="Dno">宿舍号:</string>
    <string name="Phone">手机长号:</string>
    <string name="Sphone">短号:</string>
    <string name="Note">备注:</string>
    <string name="acadeny">学院:</string>
    <string name="sex">性别</string>
    <string name="edit_grade">年级:</string>
    <string name="copyright_notice">制作人：周志江 邓江墩 林旭环 徐立文 张树悦 \n All rights reserved. @firefive 2016</string>
    <string name="check_update">检查更新</string>

</resources>
