<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.fivefire.app.gdutcontacts.ui.activity.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <com.fivefire.app.gdutcontacts.ui.common.ClearEditText
        android:id="@+id/fg_pass_pho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:inputType="phone"
        android:hint="@string/registerPho"/>

        <com.fivefire.app.gdutcontacts.ui.common.ClearEditText
            android:id="@+id/fg_pass_sno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="18dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:inputType="number"
            android:hint="@string/inputSno"/>
        <com.fivefire.app.gdutcontacts.ui.common.ClearEditText
            android:id="@+id/fg_pass__name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="18dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:inputType="text"
            android:hint="@string/inputName"/>

        <Button
            android:id="@+id/fg_pass_btn_ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_select"
            android:text="@string/ensure"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>