<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.fivefire.app.gdutcontacts.ui.activity.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.fivefire.app.gdutcontacts.ui.common.ClearEditText
            android:id="@+id/old_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="18dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/delete_select"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            />

        <com.fivefire.app.gdutcontacts.ui.common.ClearEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="18dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/delete_select"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            />

        <com.fivefire.app.gdutcontacts.ui.common.ClearEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:paddingLeft="18dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/delete_select"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_select"
            android:text="@string/confirm" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
