<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/ibt"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/image_huge"
            android:layout_height="@dimen/image_huge" />
        <TextView
            android:text="@string/app_name"
            android:id="@+id/tv_app_name"
            android:textColor="@color/primary_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_below="@id/ibt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_app_version"
            android:layout_below="@id/tv_app_name"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v1.0.0"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        >
        <Button
            android:layout_gravity="center"
            android:textSize="@dimen/font_normal"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:text="@string/check_update"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:onClick="checkUpdate"
            />
        <TextView
            android:gravity="center"
            android:lines="2"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/font_small"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
